# stratego-cli

./: CMakeLists.txt  README.md
src/: asset.c  asset.h  deltatime.c  deltatime.h  game.c  game.h  game_error.c  game_error.h  main.c  screen.c  screen.h
src/assets/: logo.txt
